--- a/style2048.css
+++ b/style2048.css
@@ -1,9 +1,31 @@
 body {
-    text-align: center;
+    background-color: #faf8ef;
+    width: 100%;
 }
 
-#board {
-    background-color: black;
-    border: 5px solid rgb(69, 69, 69);
-    border-radius: 5%;
+#board{
+    width: 100%;
+    height: 100%;
+}
+
+.jeu2048{
+    flex-direction: column;
+    align-items: center;
+    margin-right: 35%;
+    margin-left: 35%;
+
+}
+
+.blockRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: blue;
+}
+
+#newGame{
+    border-radius: 50%;
+    background-color: #8f7a66;
+    color:#f9f6f2;
+    border-style : none;
 }
