--- a/style2048.css
+++ b/style2048.css
@@ -20,7 +20,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    color: blue;
+    color: rgb(0, 0, 0);
 }
 
 #newGame{
